fix division and overflowing bug

--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ input:focus {
 }
 
 .result-numbers {
-  font-size: 3.5rem;
+  font-size: 2.2rem;
   font-weight: 300;
   justify-content: end;
   min-height: 30px;
